--- a/style.css
+++ b/style.css
@@ -1,1 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+body{
+    background-color: #eee;
+    border-color: #eee;
+    font-family: Source Sans Pro;
+}
+
+main p:nth-child(1){
+color: gray;
+}
+
+.newspaper-container{
+    background-color: white;
+    box-shadow: #ddd;
+    width: 700px;
+    padding: 25px;
+    border-radius: 15px;
+    
+}
+
+h1{
+    font-family: Abril Fatface;
+    text-align: center;
+}
+
+li{
+    list-style-type: none;
+    margin: 10px;
+    color: #777;
+    display: inline-block;
+    padding: 2px;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-spacing: 0px;
+    font-size:x-small;
+}
+
+a{
+    text-decoration: none;
+}
+
+h2{
+   font-family: Roboto Slab; 
+}
+
+h5{
+    color: red;
+    font-weight:bolder;
+}
+
+.more-articles{
+    display: inline-block;
+}
